LPS-166729 Add language keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Seleccioneu aquesta casella per 
 check-token=Testimoni de comprovació d'imatge
 check-url=Comprova l'URL
 check-your-email-or-configure-email-accounts=<a href="{0}">Comproveu el correu</a> o <a href="{1}">configureu comptes nous de correu.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Casella de selecció
 checkbox-field-type-description=Responeu preguntes de sí o no amb una casella.
 checkbox-multiple-field-type-description=Seleccioneu opcions múltiples amb una casella de selecció.
@@ -13922,6 +13923,7 @@ search-entries=Cerca entrades
 search-everywhere=Cerca completa
 search-experiences=Cerca experiències
 search-feeds=Cerca canals
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Cerca entrades de fitxer
 search-folder=Cerca la carpeta
 search-folders=Cerca carpetes
@@ -17124,6 +17126,7 @@ there-are-no-resolved-suggestions=No hi ha suggeriments resolts.
 there-are-no-resources=No hi ha cap recurs.
 there-are-no-restrictions=No hi ha restriccions.
 there-are-no-results=No hi ha cap resultat.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=No hi ha resultats per a "{0}". Comproveu que estigui ben escrit o cerqueu un altre terme.
 there-are-no-results-for-x-with-these-attributes=No hi ha resultats per a "{0}" amb aquests atributs. Ajusteu els filtres per ampliar els resultats.
 there-are-no-results-with-these-attributes=No hi ha resultats amb aquests atributs. Ajusteu els filtres per ampliar els resultats.
@@ -19319,6 +19322,7 @@ x-result-for-x={0} resultat per a {1}
 x-results={0} resultats
 x-results-for={0} resultats de
 x-results-for-x={0} resultats per {1}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} ha de revisar {1}.
 x-revisions={0} revisions
 x-role=Rol {0}
