--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Check to view the list records i
 check-token=Kontroller billedtoken (Automatic Translation)
 check-url=Kontroller URL-adresse (Automatic Translation)
 check-your-email-or-configure-email-accounts=<a href="{0}">Check your email</a> or <a href="{1}">configure email accounts.</a> (Automatic Copy)
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Checkbox (Automatic Copy)
 checkbox-field-type-description=Select from two possible values. (Automatic Copy)
 checkbox-multiple-field-type-description=Select multiple options.
@@ -13920,6 +13921,7 @@ search-entries=Søg poster
 search-everywhere=Search Everywhere (Automatic Copy)
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=Søg feeds
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Søg filer
 search-folder=Søg mappe
 search-folders=Søg mapper
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=Der er ingen løste forslag. (Automatic Transl
 there-are-no-resources=Der er ingen ressourcer. (Automatic Translation)
 there-are-no-restrictions=Der er ingen begrænsninger. (Automatic Translation)
 there-are-no-results=Der er ingen resultater.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=There are no results for "{0}". Check your spelling or search for a different term. (Automatic Copy)
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
 there-are-no-results-with-these-attributes=Der er ingen resultater med disse attributter. Juster dine filtre for at udvide dine resultater. (Automatic Translation)
@@ -19317,6 +19320,7 @@ x-result-for-x={0} Result for {1} (Automatic Copy)
 x-results={0} Results (Automatic Copy)
 x-results-for={0} Results for (Automatic Copy)
 x-results-for-x={0} Results for {1} (Automatic Copy)
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} needs to review the {1}. (Automatic Copy)
 x-revisions={0} Revisions (Automatic Copy)
 x-role={0} rolle
