--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Auswählen, um die Liste der Dat
 check-token=Bild-Token überprüfen
 check-url=URL prüfen
 check-your-email-or-configure-email-accounts=<a href="{0}">Überprüfen Sie Ihre Email</a> oder <a href="{1}">konfigurieren Sie Ihr Email-Konto.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Kontrollkästchen
 checkbox-field-type-description=Ja- oder Nein-Fragen mit einem Kontrollkästchen beantworten.
 checkbox-multiple-field-type-description=Wählen Sie mehrere Optionen mit einem Kontrollkästchen aus.
@@ -13922,6 +13923,7 @@ search-entries=Einträge durchsuchen
 search-everywhere=Überall suchen
 search-experiences=Sucherfahrungen
 search-feeds=Feeds durchsuchen
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Dateieinträge durchsuchen
 search-folder=Ordner suchen
 search-folders=Ordner durchsuchen
@@ -17124,6 +17126,7 @@ there-are-no-resolved-suggestions=Keine geschlossenen Vorschläge verfügbar.
 there-are-no-resources=Es gibt keine Ressourcen.
 there-are-no-restrictions=Es gibt keine Einschränkungen.
 there-are-no-results=Keine Ergebnisse
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=Es gibt keine Ergebnisse für "{0}". Überprüfen Sie Ihre Rechtschreibung oder suchen Sie nach einem anderen Begriff.
 there-are-no-results-for-x-with-these-attributes=Es gibt keine Ergebnisse für "{0}" mit diesen Attributen. Passen Sie Ihre Filter an, um mehr Ergebnisse zu erhalten.
 there-are-no-results-with-these-attributes=Es gibt keine Ergebnisse mit diesen Attributen. Passen Sie Ihre Filter an, um mehr Ergebnisse zu erhalten.
@@ -19319,6 +19322,7 @@ x-result-for-x={0} Ergebnis für {1}
 x-results={0} Ergebnisse
 x-results-for={0} Ergebnisse für
 x-results-for-x={0} Ergebnisse für {1}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} muss {1} überprüfen.
 x-revisions={0} Überarbeitungen
 x-role={0} Rolle
