--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Märkige see ruut loendikirjete 
 check-token=Kontrolli pildiluba (Automatic Translation)
 check-url=Kontrolli URL-i (Automatic Translation)
 check-your-email-or-configure-email-accounts=<a href="{0}">Kontrolli oma e-posti </a> või <a href="{1}">seadista e-posti kontosid.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Märkeruut
 checkbox-field-type-description=Select from two possible values. (Automatic Copy)
 checkbox-multiple-field-type-description=Select multiple options.
@@ -13920,6 +13921,7 @@ search-entries=Otsi kirjeid
 search-everywhere=Otsi kõikjalt (Automatic Translation)
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=Otsi infovoogusid
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Otsi faili kirjeid
 search-folder=Otsi kausta
 search-folders=Otsi kaustu
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=Lahendatud soovitusi pole. (Automatic Translat
 there-are-no-resources=Ressursse pole. (Automatic Translation)
 there-are-no-restrictions=Piiranguid ei ole. (Automatic Translation)
 there-are-no-results=Tulemusi ei ole.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=There are no results for "{0}". Check your spelling or search for a different term. (Automatic Copy)
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
 there-are-no-results-with-these-attributes=Nende atribuutidega tulemeid pole. Tulemuste laiendamiseks kohandage filtreid. (Automatic Translation)
@@ -19317,6 +19320,7 @@ x-result-for-x={0} Result for {1} (Automatic Copy)
 x-results={0} Results (Automatic Copy)
 x-results-for={0} Results for (Automatic Copy)
 x-results-for-x={0} Results for {1} (Automatic Copy)
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} needs to review the {1}. (Automatic Copy)
 x-revisions={0} Revisions (Automatic Copy)
 x-role={0} Role (Automatic Copy)
