--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Zerrenda erregistroak kalkulu or
 check-token=Check Image Token (Automatic Copy)
 check-url=Check URL (Automatic Copy)
 check-your-email-or-configure-email-accounts=<a href="{0}">Begiratu zure posta elektronikoa</a> edo <a href="{1}">konfiguratu posta kontuak.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Kontrol-laukia
 checkbox-field-type-description=Select from two possible values. (Automatic Copy)
 checkbox-multiple-field-type-description=Hainbat elementu hautatu kontrol-laukien bidez.
@@ -13920,6 +13921,7 @@ search-entries=Bilatu sarrerak
 search-everywhere=Toki guztietan Bilatu
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=Bilatu iturriak
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Bilatu fitxategi sarrerak
 search-folder=Bilatu karpeta
 search-folders=Bilatu karpetak
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=There are no resolved suggestions. (Automatic 
 there-are-no-resources=Ez dago baliabiderik.
 there-are-no-restrictions=There are no restrictions. (Automatic Copy)
 there-are-no-results=Ez dago emaitzarik.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=There are no results for "{0}". Check your spelling or search for a different term. (Automatic Copy)
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
 there-are-no-results-with-these-attributes=There are no results with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
@@ -19317,6 +19320,7 @@ x-result-for-x={0} Result for {1} (Automatic Copy)
 x-results={0} Results (Automatic Copy)
 x-results-for={0} Results for (Automatic Copy)
 x-results-for-x="{1}" bilaketaren emaitzak: {0}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} needs to review the {1}. (Automatic Copy)
 x-revisions={0} Revisions (Automatic Copy)
 x-role={0} rola
