--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Merkitse, jotta rivit näkyvät 
 check-token=Tarkista Kuvan Token
 check-url=Tarkista URL
 check-your-email-or-configure-email-accounts=<a href="{0}">Tarkista sähköpostit</a> tai <a href="{1}">määrittele sähköpostitilejä.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Valintaruutu
 checkbox-field-type-description=Vastaa kyllä/ei-kysymykseen valintaruudulla.
 checkbox-multiple-field-type-description=Valitse useita vaihtoehtoja valintaruudun avulla.
@@ -13919,6 +13920,7 @@ search-entries=Hae merkintöjä
 search-everywhere=Hae kaikkialta
 search-experiences=Hakukokemukset
 search-feeds=Hae syötteitä
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Hae tiedostoja
 search-folder=Hae kansio
 search-folders=Hae kansioista
@@ -17120,6 +17122,7 @@ there-are-no-resolved-suggestions=Ratkaistuja ehdotuksia ei ole.
 there-are-no-resources=Resursseja ei ole.
 there-are-no-restrictions=Rajoituksia ei ole.
 there-are-no-results=Ei yhtään tulosta.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x="{0}" ei palauttanut tuloksia. Tarkista oikeinkirjoitus tai kokeile toista termiä.
 there-are-no-results-for-x-with-these-attributes=Haulle "{0}" ei ole tuloksia näillä attribuuteilla. Säädä suodattimiasi laajentaaksesi tuloksia.
 there-are-no-results-with-these-attributes=Tuloksia ei ole näillä attribuuteilla. Säädä suodattimiasi laajentaaksesi tuloksia.
@@ -19315,6 +19318,7 @@ x-result-for-x={0} Tulos haulle {1}
 x-results={0} tulosta
 x-results-for={0} Tulosta kohteelle
 x-results-for-x={0} Tulosta kohteelle {1}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x=Käyttäjän {0} täytyy tarkastaa {1}.
 x-revisions={0} Muutosversiota
 x-role={0} Rooli
