--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Cocher pour visionner la liste d
 check-token=Vérifier le jeton image
 check-url=Vérifier l'URL
 check-your-email-or-configure-email-accounts=<a href="{0}">Vérifiez votre adresse e-mail</a> ou <a href="{1}">configurer les comptes de messagerie.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Boîte de contrôle
 checkbox-field-type-description=Répondez oui ou non aux questions en utilisant la case à cocher.
 checkbox-multiple-field-type-description=Sélectionnez plusieurs options grâce à la case à cocher.
@@ -13920,6 +13921,7 @@ search-entries=Rechercher dans les entrées
 search-everywhere=Rechercher partout
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=Rechercher des flux
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Rechercher des fichiers
 search-folder=Rechercher dans le répertoire
 search-folders=Rechercher dans les répertoires
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=Aucune suggestion résolue.
 there-are-no-resources=Il n'y a aucune ressource.
 there-are-no-restrictions=Il n'y a aucune restriction.
 there-are-no-results=Il n'y a aucun résultat.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=Aucun résultat pour « {0} ». Vérifiez l'orthographe ou recherchez un terme différent.
 there-are-no-results-for-x-with-these-attributes=Aucun résultat pour « {0} » avec ces attributs. Ajustez vos filtres pour étendre la recherche.
 there-are-no-results-with-these-attributes=Aucun résultat avec ces attributs. Ajustez vos filtres pour étendre la recherche.
@@ -19317,6 +19320,7 @@ x-result-for-x={0} résultat pour {1}
 x-results={0} Results (Automatic Copy)
 x-results-for={0} Résultats pour
 x-results-for-x={0} Résultats pour {1}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} doit revoir le {1}.
 x-revisions={0} Révisions
 x-role=Rôle {0}
