--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Ha ki van pipálva, a felvétele
 check-token=Ellenőrizze a kép tokenjét
 check-url=Ellenőrizze az URL-címet
 check-your-email-or-configure-email-accounts=<a href="{0}">Postaláda megnyitása</a> vagy <a href="{1}">email fiókok beállítása.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Jelölőnégyzet
 checkbox-field-type-description=Az igen/nem jellegű kérdésekre válaszoljon a jelölőnégyzet segítségével.
 checkbox-multiple-field-type-description=Válasszon ki több lehetőséget jelölőnégyzet használatával.
@@ -13923,6 +13924,7 @@ search-entries=Bejegyzések keresése
 search-everywhere=Keresés mindenhol
 search-experiences=Tapasztalatok keresése
 search-feeds=Csatornák keresése
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Fájlbejegyzések keresése
 search-folder=Mappa keresése
 search-folders=Mappák keresése
@@ -17125,6 +17127,7 @@ there-are-no-resolved-suggestions=Nincsenek megoldott ajánlások.
 there-are-no-resources=Nincsenek források.
 there-are-no-restrictions=Nincsenek korlátozások.
 there-are-no-results=Nincs eredmény.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=A "{0}" keresésre nincs találat. Ellenőrizze a helyesírást, vagy keressen más kifejezést.
 there-are-no-results-for-x-with-these-attributes=A "{0}" keresésre nincs találat ilyen attribútumok mellett. Bővítse a keresést a szűrők módosításával.
 there-are-no-results-with-these-attributes=A keresésre nincs találat ilyen attribútumok mellett. Bővítse a keresést a szűrők módosításával.
@@ -19320,6 +19323,7 @@ x-result-for-x={0} eredmény: {1}
 x-results={0} találat
 x-results-for={0} találat a keresésre:
 x-results-for-x={0} találat a {1} keresésre
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={1} ellenőrzést igényel {0} részéről.
 x-revisions={0} felülvizsgálat
 x-role={0} szerepkör
