--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Periksa untuk melihat catatan da
 check-token=Periksa Token Gambar (Automatic Translation)
 check-url=Periksa URL (Automatic Translation)
 check-your-email-or-configure-email-accounts=<a href="{0}">Periksa Email Anda</a> atau <a href="{1}">Konfigurasi Account Email.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Periksa Box
 checkbox-field-type-description=Select from two possible values. (Automatic Copy)
 checkbox-multiple-field-type-description=Select multiple options.
@@ -13920,6 +13921,7 @@ search-entries=Cari Entri
 search-everywhere=Cari Dimana-mana
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=Cari Feed
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Cari Entri File
 search-folder=Cari Folder
 search-folders=Cari Folder
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=Tidak ada saran yang terselesaikan. (Automatic
 there-are-no-resources=Tidak ada sumber daya. (Automatic Translation)
 there-are-no-restrictions=Tidak ada batasan. (Automatic Translation)
 there-are-no-results=Tidak ada hasil.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=There are no results for "{0}". Check your spelling or search for a different term. (Automatic Copy)
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
 there-are-no-results-with-these-attributes=Tidak ada hasil dengan atribut ini. Sesuaikan filter Anda untuk memperluas hasil Anda. (Automatic Translation)
@@ -19317,6 +19320,7 @@ x-result-for-x={0} Result for {1} (Automatic Copy)
 x-results={0} Results (Automatic Copy)
 x-results-for={0} Results for (Automatic Copy)
 x-results-for-x={0} Results for {1} (Automatic Copy)
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} needs to review the {1}. (Automatic Copy)
 x-revisions={0} Revisions (Automatic Copy)
 x-role={0} Peran
