--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -3139,6 +3139,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Seleziona per visualizzare la li
 check-token=Verifica token immagine
 check-url=Controlla l'URL
 check-your-email-or-configure-email-accounts=<a href="{0}">Controlla la posta</a> oppure <a href="{1}">configura gli account di posta elettronica.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Casella di controllo
 checkbox-field-type-description=Select from two possible values. (Automatic Copy)
 checkbox-multiple-field-type-description=Selezionare più opzioni. (Automatic Translation)
@@ -13921,6 +13922,7 @@ search-entries=Ricerca Elementi
 search-everywhere=Cerca Ovunque
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=Ricerca Feeds RSS
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Ricerca file
 search-folder=Ricerca Cartella
 search-folders=Ricerca Cartelle
@@ -17123,6 +17125,7 @@ there-are-no-resolved-suggestions=Non ci sono suggerimenti risolti.
 there-are-no-resources=Non ci sono risorse. (Automatic Translation)
 there-are-no-restrictions=Non ci sono restrizioni. (Automatic Translation)
 there-are-no-results=Non ci sono risultati.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=There are no results for "{0}". Check your spelling or search for a different term. (Automatic Copy)
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
 there-are-no-results-with-these-attributes=Non ci sono risultati con questi attributi. Regola i filtri per ampliare i risultati. (Automatic Translation)
@@ -19318,6 +19321,7 @@ x-result-for-x={0} Result for {1} (Automatic Copy)
 x-results={0} Results (Automatic Copy)
 x-results-for={0} Results for (Automatic Copy)
 x-results-for-x={0} Risultati per {1}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} needs to review the {1}. (Automatic Copy)
 x-revisions={0} Revisions (Automatic Copy)
 x-role={0} Ruolo
