--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=스프레드시트에 목록 레
 check-token=이미지 토큰 검사
 check-url=URL 검사
 check-your-email-or-configure-email-accounts=<a href="{0}">이메일을 확인</a> 혹은 <a href="{1}">이메일을 설정</a> 합니다.
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=체크 박스
 checkbox-field-type-description=두개의 가용 값에서 선택합니다.
 checkbox-multiple-field-type-description=멀티 옵션 선택
@@ -13920,6 +13921,7 @@ search-entries=수색 입장
 search-everywhere=모든 곳에서 검색
 search-experiences=경험 검색
 search-feeds=수색은 먹인다
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=수색 파일 입장
 search-folder=수색 폴더
 search-folders=수색 폴더
@@ -17121,6 +17123,7 @@ there-are-no-resolved-suggestions=해결된 제안이 없습니다.
 there-are-no-resources=리소스가 없습니다.
 there-are-no-restrictions=제한이 없습니다.
 there-are-no-results=아무 결과도 없다.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x="{0}"의 결과가 없습니다. 철자를 살펴보거나 다른 검색어로 검색하십시오.
 there-are-no-results-for-x-with-these-attributes=이러한 속성을 가진 "{0}"에 대한 결과가 없습니다. 필터를 조정하여 결과를 넓히십시오.
 there-are-no-results-with-these-attributes=해당 속성을 가진 결과가 없습니다. 필터를 조정하여 결과를 넓히십시오.
@@ -19316,6 +19319,7 @@ x-result-for-x={0}에 대한 결과 {1}
 x-results={0} 결과
 x-results-for={0} Results for
 x-results-for-x={0}에 대한 결과 {1}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0}은(는) {1}을(를) 검토해야 합니다.
 x-revisions={0} 개정
 x-role={0} 역할
