--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Semak untuk melihat rekod senara
 check-token=Semak Token Imej (Automatic Translation)
 check-url=Semak URL (Automatic Translation)
 check-your-email-or-configure-email-accounts=<a href="{0}">Check your email</a> or <a href="{1}">configure email accounts.</a> (Automatic Copy)
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Kotak Semak (Automatic Translation)
 checkbox-field-type-description=Select from two possible values. (Automatic Copy)
 checkbox-multiple-field-type-description=Pilih berbilang opsyen. (Automatic Translation)
@@ -13920,6 +13921,7 @@ search-entries=Masukan Gelintar (Automatic Translation)
 search-everywhere=Cari Di Mana-mana (Automatic Translation)
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=Suapan Gelintar (Automatic Translation)
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Gelintar Masukan Fail (Automatic Translation)
 search-folder=Folder Gelintar (Automatic Translation)
 search-folders=Gelintar Folder (Automatic Translation)
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=Tiada cadangan yang diselesaikan. (Automatic T
 there-are-no-resources=Tiada sumber. (Automatic Translation)
 there-are-no-restrictions=Tiada sekatan. (Automatic Translation)
 there-are-no-results=Tiada keputusan. (Automatic Translation)
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=There are no results for "{0}". Check your spelling or search for a different term. (Automatic Copy)
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
 there-are-no-results-with-these-attributes=Tiada keputusan dengan atribut ini. Laraskan penapis anda untuk meluaskan hasil anda. (Automatic Translation)
@@ -19317,6 +19320,7 @@ x-result-for-x={0} Result for {1} (Automatic Copy)
 x-results={0} Results (Automatic Copy)
 x-results-for={0} Results for (Automatic Copy)
 x-results-for-x={0} Results for {1} (Automatic Copy)
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} needs to review the {1}. (Automatic Copy)
 x-revisions={0} Revisions (Automatic Copy)
 x-role={0} Peranan
