--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Kryss av for å vise postene fra
 check-token=Kontroller bildetoken (Automatic Translation)
 check-url=Kontroller URL-adresse (Automatic Translation)
 check-your-email-or-configure-email-accounts=<a href="{0}">Sjekk e-posten din</a> eller <a href="{1}">konfigurer e-postkontoer.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Avkryssingsboks
 checkbox-field-type-description=Svar ja eller nei ved hjelp av en avhukingsboks.
 checkbox-multiple-field-type-description=Velg flere valg.
@@ -13920,6 +13921,7 @@ search-entries=Søk innlegg
 search-everywhere=Søk overalt
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=Søk feeds
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Søk filer
 search-folder=Søk mappe
 search-folders=Søk mapper
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=Det finnes ingen løste forslag.
 there-are-no-resources=Det finnes ingen ressurser.
 there-are-no-restrictions=Det er ingen begrensninger. (Automatic Translation)
 there-are-no-results=Det finnes ingen resultater.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=Det finnes ingen resultater for "{0}". Sjekk stavingen din, eller søk på noe annet.
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
 there-are-no-results-with-these-attributes=Det finnes ingen resultater med disse attributtene. Juster filtrene for å utvide resultatene. (Automatic Translation)
@@ -19317,6 +19320,7 @@ x-result-for-x={0} Result for {1} (Automatic Copy)
 x-results={0} Results (Automatic Copy)
 x-results-for={0} Results for (Automatic Copy)
 x-results-for-x={0} Results for {1} (Automatic Copy)
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} needs to review the {1}. (Automatic Copy)
 x-revisions={0} Revisions (Automatic Copy)
 x-role={0} Rolle
