--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Selecteren om de lijst met items
 check-token=Afbeeldingstoken controleren
 check-url=URL controleren
 check-your-email-or-configure-email-accounts=<a href="{0}">E-mail ontvangen </a> of <a href="{1}">e-mailaccounts configureren.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Selectievak
 checkbox-field-type-description=Antwoord ja of nee met behulp van een selectievakje.
 checkbox-multiple-field-type-description=Selecteer meerdere opties door een selectievakje aan te vinken.
@@ -13923,6 +13924,7 @@ search-entries=Invoer zoeken
 search-everywhere=Overal zoeken
 search-experiences=Ervaringen zoeken
 search-feeds=Feeds zoeken
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Bestanden zoeken
 search-folder=Map zoeken
 search-folders=Mappen zoeken
@@ -17125,6 +17127,7 @@ there-are-no-resolved-suggestions=Er zijn geen opgeloste suggesties.
 there-are-no-resources=Er zijn geen bronnen.
 there-are-no-restrictions=Er zijn geen beperkingen.
 there-are-no-results=Er zijn geen resultaten.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=Er zijn geen resultaten voor "{0}". Controleer de spelling of zoek een andere term.
 there-are-no-results-for-x-with-these-attributes=Er zijn geen resultaten voor "{0}" met deze kenmerken. Pas uw filters aan om de zoekopdracht te verruimen.
 there-are-no-results-with-these-attributes=Er zijn geen resultaten met deze kenmerken. Pas uw filters aan om de zoekopdracht te verruimen.
@@ -19320,6 +19323,7 @@ x-result-for-x={0} resultaat voor {1}
 x-results={0} resultaten
 x-results-for={0} resultaten voor
 x-results-for-x={0} Resultaten voor {1}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} moet {1} controleren.
 x-revisions={0} Revisies
 x-role={0} rol
