--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Marque para ver a lista de regis
 check-token=Verificar token de imagem
 check-url=Verificar URL
 check-your-email-or-configure-email-accounts=<a href="{0}">Verifique seu email</a> ou <a href="{1}">configure contas de email.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Caixa de Seleção
 checkbox-field-type-description=Responda sim ou não usando uma caixa de seleção.
 checkbox-multiple-field-type-description=Selecionar várias opções usando uma caixa de seleção.
@@ -13920,6 +13921,7 @@ search-entries=Pesquisar Registros
 search-everywhere=Pesquisar Tudo
 search-experiences=Experiência de busca
 search-feeds=Pesquisar Feeds
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Pesquisar Arquivos
 search-folder=Pesquisar Pasta
 search-folders=Pesquisar Pastas
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=Não há sugestões não solucionadas.
 there-are-no-resources=Não há recursos.
 there-are-no-restrictions=Não existem restrições.
 there-are-no-results=Não há resultados.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=Não há nenhum resultado para "{0}". Verifique se a palavra foi escrita corretamente ou procure por um termo diferente.
 there-are-no-results-for-x-with-these-attributes=Não há nenhum resultado para "{0}" com estes atributos. Ajuste seus filtros para ampliar seus resultados.
 there-are-no-results-with-these-attributes=Não há nenhum resultado com estes atributos. Ajuste seus filtros para ampliar seus resultados.
@@ -19317,6 +19320,7 @@ x-result-for-x={0} Resultado de {1}
 x-results={0} resultados
 x-results-for={0} Resultados para
 x-results-for-x={0} Resultados para {1}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} precisa revisar {1}.
 x-revisions={0} Revisões
 x-role=Função {0}
