--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Assinale para ver a lista de reg
 check-token=Verificar token de imagem (Automatic Translation)
 check-url=Verificar URL (Automatic Translation)
 check-your-email-or-configure-email-accounts=<a href="{0}">Verifique o seu email</a> ou <a href="{1}">configure contas de email.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Caixa de Verificação
 checkbox-field-type-description=Select from two possible values. (Automatic Copy)
 checkbox-multiple-field-type-description=Selecionar várias opções usando uma caixa de seleção.
@@ -13922,6 +13923,7 @@ search-entries=Pesquisar Entradas
 search-everywhere=Pesquisar Tudo
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=Pesquisar Feeds
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Pesquisar Ficheiros
 search-folder=Pesquisar Pasta
 search-folders=Pesquisar Pastas
@@ -17124,6 +17126,7 @@ there-are-no-resolved-suggestions=Não há sugestões resolvidas. (Automatic Tra
 there-are-no-resources=Não há recursos. (Automatic Translation)
 there-are-no-restrictions=Não há restrições. (Automatic Translation)
 there-are-no-results=Não há resultados.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=There are no results for "{0}". Check your spelling or search for a different term. (Automatic Copy)
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
 there-are-no-results-with-these-attributes=Não há resultados com esses atributos. Ajuste seus filtros para ampliar seus resultados. (Automatic Translation)
@@ -19319,6 +19322,7 @@ x-result-for-x={0} Result for {1} (Automatic Copy)
 x-results={0} Results (Automatic Copy)
 x-results-for={0} Results for (Automatic Copy)
 x-results-for-x={0} Resultados para {1}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} needs to review the {1}. (Automatic Copy)
 x-revisions={0} Revisions (Automatic Copy)
 x-role={0} Papel
