--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Zaškrtnite aby sa záznamy zobr
 check-token=Skontrolovať token obrázka (Automatic Translation)
 check-url=Skontrolovať adresu URL (Automatic Translation)
 check-your-email-or-configure-email-accounts=<a href="{0}">Skontrolujte si svoj e-mail</a> alebo <a href="{1}">si nastavte e-mailové účty.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Zaškrtávacie pole
 checkbox-field-type-description=Select from two possible values. (Automatic Copy)
 checkbox-multiple-field-type-description=Vyberte viacero možností. (Automatic Translation)
@@ -13920,6 +13921,7 @@ search-entries=Vyhľadávať v záznamoch
 search-everywhere=Hľadať všade
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=Vyhľadávať v informačných kanáloch
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Vyhľadávať v záznamoch súborov
 search-folder=Hladať priečinok
 search-folders=Hľadať priečinky
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=Neexistujú žiadne vyriešené návrhy. (Auto
 there-are-no-resources=Nie sú tu žiadne zdroje. (Automatic Translation)
 there-are-no-restrictions=Neexistujú žiadne obmedzenia. (Automatic Translation)
 there-are-no-results=Žiadny výsledok.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=There are no results for "{0}". Check your spelling or search for a different term. (Automatic Copy)
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
 there-are-no-results-with-these-attributes=Neexistujú žiadne výsledky s týmito atribútmi. Upravte filtre tak, aby sa výsledky rozšírili. (Automatic Translation)
@@ -19317,6 +19320,7 @@ x-result-for-x={0} Result for {1} (Automatic Copy)
 x-results={0} Results (Automatic Copy)
 x-results-for={0} Results for (Automatic Copy)
 x-results-for-x={0} Results for {1} (Automatic Copy)
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} needs to review the {1}. (Automatic Copy)
 x-revisions={0} Revisions (Automatic Copy)
 x-role=Rola {0}
