--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Kryssa i för att visa lista som
 check-token=Kontrollera bildtoken
 check-url=Kontrollera URL
 check-your-email-or-configure-email-accounts=<a href="{0}">Kolla din e-post</a> eller <a href="{1}">konfigurera dina e-postkonton.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Kryssruta
 checkbox-field-type-description=Svara ja eller nej på frågor genom att använda en kryssruta.
 checkbox-multiple-field-type-description=Välj flera alternativ genom att använda en kryssruta.
@@ -13920,6 +13921,7 @@ search-entries=Sök inlägg
 search-everywhere=Sök överallt
 search-experiences=Sök efter erfarenheter
 search-feeds=Sök prenumerationer
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Sök filer
 search-folder=Sök mapp
 search-folders=Sök mappar
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=Det finns inga lösta förslag.
 there-are-no-resources=Det finns inga resurser.
 there-are-no-restrictions=Det finns inga begränsningar.
 there-are-no-results=Det finns inga träffar.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=Det finns inga resultat för "{0}". Kontrollera att du stavat rätt eller sök efter en annan term.
 there-are-no-results-for-x-with-these-attributes=Det finns inga resultat för "{0}" med dessa attribut. Justera dina filter för att utöka dina resultat.
 there-are-no-results-with-these-attributes=Det finns inga resultat med dessa attribut. Justera dina filter för att utöka dina resultat.
@@ -19317,6 +19320,7 @@ x-result-for-x={0} resultat för {1}
 x-results={0} resultat
 x-results-for={0} resultat för
 x-results-for-x={0} resultat för {1}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} måste granska {1}.
 x-revisions={0} revisioner
 x-role={0} Roll
