--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Elektronik tablodaki liste kayı
 check-token=Resim Belirtecine Bakın (Automatic Translation)
 check-url=URL'yi denetle (Automatic Translation)
 check-your-email-or-configure-email-accounts=<a href="{0}">E-postalarını Kontrol Et</a> or <a href="{1}">E-posta hesaplarını konfigüre et.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Kutucuğu İşsaretle
 checkbox-field-type-description=Select from two possible values. (Automatic Copy)
 checkbox-multiple-field-type-description=Select multiple options.
@@ -13920,6 +13921,7 @@ search-entries=Girdileri Ara
 search-everywhere=Her Yerde Ara (Automatic Translation)
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=Beslemeleri Ara
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Dosya Girdilerini Ara
 search-folder=Klasörü Ara
 search-folders=Klasörleri Ara
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=Çözümlenmiş öneri yok. (Automatic Transla
 there-are-no-resources=Kaynak yok. (Automatic Translation)
 there-are-no-restrictions=Herhangi bir kısıtlama yoktur. (Automatic Translation)
 there-are-no-results=Sonuç yok.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=There are no results for "{0}". Check your spelling or search for a different term. (Automatic Copy)
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
 there-are-no-results-with-these-attributes=Bu özniteliklere sahip sonuç yok. Sonuçlarınızı genişletmek için filtrelerinizi ayarlayın. (Automatic Translation)
@@ -19317,6 +19320,7 @@ x-result-for-x={0} Result for {1} (Automatic Copy)
 x-results={0} Results (Automatic Copy)
 x-results-for={0} Results for (Automatic Copy)
 x-results-for-x={0} Results for {1} (Automatic Copy)
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} needs to review the {1}. (Automatic Copy)
 x-revisions={0} Revisions (Automatic Copy)
 x-role={0} Role (Automatic Copy)
