--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=تحديد الصندوق لعر
 check-token=فحص رمز الصورة المميز
 check-url=افحص URL
 check-your-email-or-configure-email-accounts=<a href="{0}">راجع بريدك الإلكتروني</a> أو <a href="{1}">قم بتهيئة حسابات بريدك الإلكتروني.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=صندوق الاختيار
 checkbox-field-type-description=أجب على الأسئلة بنعم أو لا باستخدام خانة اختيار.
 checkbox-multiple-field-type-description=حدد خيارات متعددة.
@@ -13920,6 +13921,7 @@ search-entries=إبحث في المدخلات
 search-everywhere=البحث في كل مكان
 search-experiences=بحث عن التجارب
 search-feeds=إبحث في الأصناف
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=البحث في مدخلات الملفات
 search-folder=إبحث في المجلّد
 search-folders=إبحث في المجلّدات
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=لا توجد اقتراحات محلولة.
 there-are-no-resources=لا توجد موارد.
 there-are-no-restrictions=لا توجد قيود.
 there-are-no-results=لا توجد مناسبات.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=لا توجد نتائج لـ "{0}". افحص الهجاء أو ابحث عن مصطلح مختلف.
 there-are-no-results-for-x-with-these-attributes=لا يوجد نتائج لـ "{0}" بهذه السمات. اضبط عوامل التصفية لتوسيع النتائج الخاصة بك.
 there-are-no-results-with-these-attributes=لا يوجد نتائج بهذه السمات. اضبط عوامل التصفية لتوسيع النتائج الخاصة بك.
@@ -19317,6 +19320,7 @@ x-result-for-x={0} نتيجة لـ {1}
 x-results={0} من النتائج
 x-results-for={0} من النتائج لـ
 x-results-for-x={0} من النتائج لـ {1}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} يحتاج إلى مراجعة {1}.
 x-revisions={0} من المراجعات
 x-role=دور {0}
