--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Marcar para ver la lista de regi
 check-token=Comprobar token de imagen
 check-url=Comprobar URL
 check-your-email-or-configure-email-accounts=<a href="{0}">Consultar el correo electrónico</a> o <a href="{1}">configurar las cuentas de correo.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Casilla de selección
 checkbox-field-type-description=Permite responder a preguntas de sí o no con una casilla.
 checkbox-multiple-field-type-description=Permite seleccionar varias opciones con una casilla.
@@ -13922,6 +13923,7 @@ search-entries=Buscar entradas
 search-everywhere=Buscar en todo
 search-experiences=Experiencias de búsqueda
 search-feeds=Buscar fuentes
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Buscar archivos
 search-folder=Buscar en esta carpeta
 search-folders=Buscar carpetas
@@ -17124,6 +17126,7 @@ there-are-no-resolved-suggestions=No hay sugerencias solucionadas.
 there-are-no-resources=No hay ningún recurso.
 there-are-no-restrictions=No hay restricciones.
 there-are-no-results=No hay resultados.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=No hay resultados para «{0}». Revise la ortografía o use otro término de búsqueda.
 there-are-no-results-for-x-with-these-attributes=No hay resultados de «{0}» con estos atributos. Ajuste los filtros para ampliar los resultados.
 there-are-no-results-with-these-attributes=No hay resultados con estos atributos. Ajuste los filtros para ampliar los resultados.
@@ -19319,6 +19322,7 @@ x-result-for-x={0} resultado de {1}
 x-results={0} resultados
 x-results-for={0} resultados de
 x-results-for-x={0} resultados para {1}
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} necesita revisar {1}.
 x-revisions={0} revisiones
 x-role=Rol {0}
