--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Preverite, ali si želite ogleda
 check-token=Preveri slikovne žetone (Automatic Translation)
 check-url=Preveri URL (Automatic Translation)
 check-your-email-or-configure-email-accounts=<a href="{0}">Preverite vašo e-pošto</a> ali pa <a href="{1}">uredite nastavite za vaše e-poštne račune</a>.
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Polje (Automatic Translation)
 checkbox-field-type-description=Select from two possible values. (Automatic Copy)
 checkbox-multiple-field-type-description=Select multiple options.
@@ -13920,6 +13921,7 @@ search-entries=Išči vnose
 search-everywhere=Iskanje povsod (Automatic Translation)
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=Išči vire
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Išči vnose v datoteke
 search-folder=Išči mapo
 search-folders=Išči mape
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=Ni rešenih predlogov. (Automatic Translation)
 there-are-no-resources=Ni virov. (Automatic Translation)
 there-are-no-restrictions=Nobenih omejitev ni. (Automatic Translation)
 there-are-no-results=Ni rezultata.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=There are no results for "{0}". Check your spelling or search for a different term. (Automatic Copy)
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
 there-are-no-results-with-these-attributes=S temi atributi ni rezultatov. Prilagodite filtre, da razširite rezultate. (Automatic Translation)
@@ -19317,6 +19320,7 @@ x-result-for-x={0} Result for {1} (Automatic Copy)
 x-results={0} Results (Automatic Copy)
 x-results-for={0} Results for (Automatic Copy)
 x-results-for-x={0} Results for {1} (Automatic Copy)
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} needs to review the {1}. (Automatic Copy)
 x-revisions={0} Revisions (Automatic Copy)
 x-role={0} Role (Automatic Copy)
