--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Spreadsheet-ல் உள்ள 
 check-token=படத்தின் டோக்கன் சரிபார்க்கவும்
 check-url=Check URL (Automatic Copy)
 check-your-email-or-configure-email-accounts=<a href="{0}">மின்னஞ்சலை பார்க்கவும்</a> or <a href="{1}">மின்னஞ்சல் கணக்கை கட்டமைக்கவும்</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Checkbox (Automatic Copy)
 checkbox-field-type-description=Checkbox யைப் பயன்படுத்தி கேள்விகளுக்கு ஆம் அல்லது இல்லை என பதில் தருக.
 checkbox-multiple-field-type-description=Checkbox யைப் பயன்படுத்தி பல விருப்பங்களைத் தேர்ந்தெடுக்கவும்.
@@ -13920,6 +13921,7 @@ search-entries=பதிவுகளை தேடுக
 search-everywhere=எல்லா இடங்களிலும் தேடு
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=ஊட்டங்களை தேடுக
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=பதிவுகளை தேடுக
 search-folder=ஃபோல்டரை தேடுக
 search-folders=ஃபோல்டர்களை தேடுக
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=தீர்க்கப்பட்ட பர
 there-are-no-resources=Resources எதுவும் இல்லை.
 there-are-no-restrictions=There are no restrictions. (Automatic Copy)
 there-are-no-results=முடிவுகள் எதுவும் இல்லை.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=There are no results for "{0}". Check your spelling or search for a different term. (Automatic Copy)
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
 there-are-no-results-with-these-attributes=There are no results with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
@@ -19317,6 +19320,7 @@ x-result-for-x={0} Result for {1} (Automatic Copy)
 x-results={0} Results (Automatic Copy)
 x-results-for={0} முடிவுகள்
 x-results-for-x={1} க்கான {0} முடிவுகள்
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} needs to review the {1}. (Automatic Copy)
 x-revisions={0} Revisions (Automatic Copy)
 x-role={0} பங்கு
