--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -3140,6 +3140,7 @@ check-to-view-the-list-records-in-a-spreadsheet=Chọn để hiển thị danh s
 check-token=Kiểm tra Mã thông báo Hình ảnh (Automatic Translation)
 check-url=Kiểm tra URL (Automatic Translation)
 check-your-email-or-configure-email-accounts=<a href="{0}">Kiểm tra thư điện tử của bạn</a> hoặc <a href="{1}">cấu hình một tài khoản thư điện tử.</a>
+check-your-spelling-or-search-for-a-different-term=Check your spelling or search for a different term. (Automatic Copy)
 checkbox=Hộp chọn (checkbox)
 checkbox-field-type-description=Select from two possible values. (Automatic Copy)
 checkbox-multiple-field-type-description=Select multiple options.
@@ -13920,6 +13921,7 @@ search-entries=Tìm kiếm nội dung
 search-everywhere=Tìm kiếm tất cả mọi nơi
 search-experiences=Search Experiences (Automatic Copy)
 search-feeds=Tìm kiếm trong nguồn tin
+search-field-is-empty=Search field is empty. All fields are listed. (Automatic Copy)
 search-file-entries=Tìm kiếm trên thông tin miêu tả tệp tin
 search-folder=Tìm kiếm thư mục
 search-folders=Tìm kiếm thư mục
@@ -17122,6 +17124,7 @@ there-are-no-resolved-suggestions=Không có đề xuất giải quyết. (Autom
 there-are-no-resources=Không có tài nguyên. (Automatic Translation)
 there-are-no-restrictions=Không có hạn chế. (Automatic Translation)
 there-are-no-results=Không có kết quả nào.
+there-are-no-results-for-the-search-term-x=There are no results for the search term: {0}. (Automatic Copy)
 there-are-no-results-for-x=There are no results for "{0}". Check your spelling or search for a different term. (Automatic Copy)
 there-are-no-results-for-x-with-these-attributes=There are no results for "{0}" with these attributes. Adjust your filters to broaden your results. (Automatic Copy)
 there-are-no-results-with-these-attributes=Không có kết quả với các thuộc tính này. Điều chỉnh bộ lọc để mở rộng kết quả. (Automatic Translation)
@@ -19317,6 +19320,7 @@ x-result-for-x={0} Result for {1} (Automatic Copy)
 x-results={0} Results (Automatic Copy)
 x-results-for={0} Results for (Automatic Copy)
 x-results-for-x={0} Results for {1} (Automatic Copy)
+x-results-returned-for-the-search-term-x={0} results returned for the search term: {1}. (Automatic Copy)
 x-review-a-x={0} needs to review the {1}. (Automatic Copy)
 x-revisions={0} Revisions (Automatic Copy)
 x-role={0} Quyền và Chức năng
